Finished recursive solution and few minor bugs

--- a/Problem1Files/userDefThreads/Makefile
+++ b/Problem1Files/userDefThreads/Makefile
@@ -1,2 +1,2 @@
-recursThreadsmake: main.c
-	gcc -o userDefThreads main.c -std=c99
+userThreadsmake: main.c
+	gcc -o userDefThreads main.c -w -std=c99
